--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
-:root {
-  --white: #fafafa;
-  --black: #151515;
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap");
 
-  --sizelText1: 1rem;
-  --sizelText2: 1.25rem;
-  --sizelText3: 1.5rem;
-  --sizelText4: 2rem;
-  --sizelText4: 3rem;
+:root {
+  --primary-color: #0a66c2;
+  --secondary-color: #2a2d3e;
+  --accent-color: #2f855a;
+  --black: #151515;
+  --gray: #f6f3f4;
+  --white: #fafafa;
+
+  --heading: "Roboto Flex", sans-serif;
+  --title: "Open Sans", sans-serif;
+  --paragraph: "EB Garamond", sans-serif;
 }
 
 * {
@@ -14,6 +18,18 @@
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #555;
 }
 
 /* SIMILAR CODE */
@@ -30,32 +46,46 @@ article {
   min-height: 500px;
   padding: 80px 0;
 }
-.title {
-  font-size: 2rem;
+h1,
+h2 {
+  font-family: var(--heading);
+}
+h1 {
+  color: var(--primary-color);
+  font-size: 3rem;
   text-align: center;
-  margin: 0 auto 2rem auto;
+  margin: 0 auto;
 }
-.title span {
+h2 {
   font-size: 2rem;
-  margin: 0 0 0.5rem 0;
 }
-.title p {
-  font-size: 1.1rem;
+span,
+a,
+label {
+  font-family: var(--title);
 }
 span {
   display: inline-block;
+  font-size: 1.25rem;
 }
 p {
+  font-family: var(--paragraph);
   font-size: 1rem;
   text-align: justify;
+  letter-spacing: 0.5px;
 }
 i {
   font-size: 1.2rem;
 }
+button,
+a {
+  cursor: pointer;
+}
 button {
-  background-color: var(--black);
+  background-color: var(--primary-color);
   color: var(--white);
-  border: 1.5px solid var(--black);
+  font-size: 1rem;
+  border: 1.5px solid var(--primary-color);
   padding: 0.5rem 0.8rem;
   border-radius: 0.5rem;
   transition: 0.3s;
@@ -64,7 +94,24 @@ button:hover {
   border: 1.5px solid var(--white);
 }
 
+.content {
+  width: 100%;
+  margin: 2rem 0 0 0;
+}
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hide {
+  display: none !important;
+}
+
 /* HEADER */
+header {
+  background-color: var(--white);
+}
 nav {
   position: fixed;
   top: 0;
@@ -73,16 +120,24 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: transparent;
   padding: 2rem 2.5rem;
   transition: 0.3s ease-out;
   z-index: 3;
 }
-nav.bg-blur {
-  background-color: var(--black);
+nav.scroll {
+  background-color: var(--secondary-color);
 }
-nav > span {
+nav :is(span, .toggles a) {
+  color: var(--darkGray);
+}
+nav.scroll :is(span, .toggles a) {
   color: var(--white);
-  font-size: 1.25rem;
+}
+nav img {
+  width: 200px;
+  height: 50px;
+  object-fit: cover;
 }
 .toggles {
   display: flex;
@@ -91,7 +146,6 @@ nav > span {
 }
 .toggles a {
   position: relative;
-  color: var(--white);
 }
 .toggles a::after {
   content: "";
@@ -100,9 +154,12 @@ nav > span {
   bottom: -3px;
   left: 0;
   right: 0;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1.5px solid var(--black);
   transform: scaleX(0);
   transition: 0.2s;
+}
+nav.scroll .toggles a::after {
+  border-bottom: 1.5px solid var(--white);
 }
 .toggles a:hover::after {
   transform: scaleX(0.5);
@@ -111,167 +168,109 @@ nav > span {
 /* JUMBOTRON */
 .jumbotron {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  gap: 1rem;
   height: 100vh;
-  background-image: url(./img/me.JPG);
-  background-size: cover;
+  color: var(--darkGray);
 }
-.jumbotron span {
-  color: var(--white);
-  font-size: 3rem;
-  text-shadow: 1px 1px 2px #151515;
+.jumbotron .text span {
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 2px var(--gray);
 }
-.jumbotron p {
-  color: var(--white);
-  font-size: 1.1rem;
-  text-shadow: 1px 1px 2px #151515;
+.jumbotron .text p {
+  margin: 0.5rem 0 1.5rem 0;
+  text-shadow: 1px 1px 2px var(--gray);
 }
-.jumbotron button {
-  font-size: 1.25rem;
+.jumbotron img {
+  width: 300px;
+  aspect-ratio: 1 / 1;
 }
 
 /* ABOUT */
 .about .content {
-  position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 2rem;
-  width: 100%;
+  grid-template-columns: 1.5fr 2fr;
+  gap: 1rem;
 }
 .about .content .desc {
-  position: absolute;
-  top: 0;
-  left: 0%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #fff;
-  padding: 2rem 0 0 0;
   transition: 0.5s;
-  z-index: 2;
 }
-.about .content .desc span {
+.about .content .desc h2 {
   display: block;
   font-size: 2rem;
-  text-align: center;
 }
 .about .content .desc p {
-  margin: 0.5rem 0 1.5rem 0;
-}
-.about .content .desc .btn-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-evenly;
-  gap: 1rem;
-  padding: 0 1rem;
-}
-.about .content .desc .btn-container button {
-  font-size: 1.1rem;
-  transition: 0.3s;
-}
-.about .content .desc .btn-container button:not(.active) {
-  background-color: transparent;
-  color: var(--black);
-  border: 1.5px solid var(--black);
-}
-.about .content .desc .line {
-  position: relative;
-  width: 100%;
-  height: 5px;
-  margin: 2.5rem 0 1.5rem 0;
-  border-radius: 0.5rem;
-  background-color: var(--black);
-}
-.about .content .desc .line i {
-  content: "";
-  position: absolute;
-  top: -10px;
-  left: 50%;
-  background-color: #fff;
-  padding: 0 0.3rem;
-  transform: translateX(-50%);
-  z-index: 1;
+  margin: 0.5rem 0 1rem 0;
 }
 .about .content .desc .social-links {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   height: 50px;
-  border-radius: 2rem;
 }
 .about .content .desc .social-links a {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--black);
+  background-color: var(--secondary-color);
   color: var(--white);
   font-size: 1.1rem;
 }
 .about .content .desc .social-links a:first-child {
-  border-top-left-radius: 2rem;
-  border-bottom-left-radius: 2rem;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 .about .content .desc .social-links a:first-child:hover {
-  border-left: 2px solid var(--black);
+  border-left: 2px solid var(--secondary-color);
 }
 .about .content .desc .social-links a:last-child {
   border-top-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
 .about .content .desc .social-links a:last-child:hover {
-  border-right: 2px solid var(--black);
+  border-right: 2px solid var(--secondary-color);
 }
 .about .content .desc .social-links a:hover {
   background-color: var(--white);
-  color: var(--black);
-  border-top: 2px solid var(--black);
-  border-bottom: 2px solid var(--black);
+  color: var(--secondary-color);
+  border-top: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
 }
-.our-journey,
-.our-history,
-.work .content {
-  position: relative;
-  height: 500px;
-}
-.ourJourney,
-.ourHistory,
-.ourWorks {
+.ourJourney {
   width: 100%;
-  height: 100%;
+  height: 350px;
   cursor: grab;
-}
-.weddings {
-  cursor: grab;
+  border-radius: 0.5rem;
 }
 .ourJourney:active,
-.ourHistory:active,
 .weddings:active {
   cursor: grabbing;
 }
-.ourJourney .swiper-wrapper .swiper-slide .overlay,
-.ourHistory .swiper-wrapper .swiper-slide .overlay {
+.ourJourney .swiper-wrapper .swiper-slide .overlay {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
   gap: 0.7rem;
   height: 100%;
-  background: linear-gradient(to top, rgba(21, 21, 21, 0.7), rgba(0, 0, 0, 0));
+  background: linear-gradient(
+    to top,
+    rgba(42, 45, 62, 0.8),
+    rgba(42, 45, 62, 0)
+  );
   color: var(--white);
   padding: 0 1rem 1.5rem 1rem;
   transition: 0.3s;
 }
-.ourJourney .swiper-wrapper .swiper-slide:hover .overlay,
-.ourHistory .swiper-wrapper .swiper-slide:hover .overlay {
-  opacity: 0;
-}
-.ourJourney .swiper-wrapper .swiper-slide .overlay span,
-.ourHistory .swiper-wrapper .swiper-slide .overlay span {
+.ourJourney .swiper-wrapper .swiper-slide .overlay span {
   position: relative;
   font-size: 1.2rem;
 }
-.ourJourney .swiper-wrapper .swiper-slide .overlay span::after,
-.ourHistory .swiper-wrapper .swiper-slide .overlay span::after {
+.ourJourney .swiper-wrapper .swiper-slide .overlay span::after {
   content: "";
   position: absolute;
   bottom: -3px;
@@ -283,66 +282,347 @@ nav > span {
 
 /* WORK */
 .work {
-  background-color: var(--black);
+  background-color: var(--secondary-color);
+  color: var(--black);
+}
+.work .header h1 {
   color: var(--white);
 }
-.work .wrapper {
-  width: 1000px;
+.work .header span {
+  color: var(--white);
 }
 .work .content {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr;
+  gap: 0.7rem;
   width: 100%;
+  height: 500px;
 }
-.work .content .ourWorks .swiper-wrapper {
+.work .content aside {
   display: flex;
-  overflow: hidden;
+  flex-direction: column;
+  gap: 1rem;
 }
-.work .content .ourWorks .swiper-pagination .swiper-pagination-bullet {
+.work .content aside input {
   background-color: var(--white);
+  color: var(--black);
+  padding: 1rem 0.7rem;
+  border: none;
+  border-radius: 0.3rem;
+  outline: none;
 }
-.work .content .project {
-  width: calc(100% / 3 - 10px);
+.work .content aside input::placeholder {
+  color: var(--black);
 }
-.work .content .project img {
+.work .content aside .filters,
+.work .content aside .filters .filter,
+.work .content aside .filters .filter .head,
+.work .content aside .filters .filter .options {
+  display: flex;
+}
+.work .content aside .filters,
+.work .content aside .filters .filter,
+.work .content aside .filters .filter .options {
+  flex-direction: column;
+}
+.work .content aside .filters {
+  gap: 0.3rem;
+}
+.work .content aside .filters .filter .head {
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+.work .content aside .filters .filter {
+  background-color: var(--black);
+  color: var(--white);
+  border-radius: 0.5rem;
+  overflow-y: hidden;
+}
+.work .content aside .filters .filter .options {
+  height: 0;
+  background-color: var(--white);
+  transition: 0.2s;
+}
+.work .content aside .filters .filter .options label {
+  position: relative;
+  background-color: var(--white);
+  color: var(--black);
+  padding: 0.75rem 0.5rem;
+}
+.work .content aside .filters .filter .options label:hover {
+  background-color: var(--gray);
+}
+.work .content aside .filters .filter .options label:nth-child(even) {
+  border-top: 1.5px solid #ccc;
+  border-bottom: 1.5px solid #ccc;
+}
+.work .content aside .filters .filter .options input {
+  margin: 0 0.75rem 0 0;
+  opacity: 0;
+}
+.work .content aside .filters .filter .options .checkmark {
+  position: absolute;
+  top: 50%;
+  left: 0.5rem;
+  width: 20px;
+  height: 20px;
+  border: 1.5px solid var(--accent-color);
+  transform: translateY(-50%);
+}
+.work .content aside .filters .filter .options input:checked ~ .checkmark {
+}
+.work .content .works-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem 0.5rem;
+  padding: 0 0.5rem 0 0;
+  overflow-y: scroll;
+}
+.work .content .works-container::-webkit-scrollbar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+.work .content .works-container .project {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white);
+  border-radius: 0.5rem;
+}
+.work .content .works-container .project .image {
+  position: relative;
+  display: flex;
+}
+.work .content .works-container .project img {
   width: 100%;
-  aspect-ratio: 1/1;
+  height: 200px;
   object-fit: cover;
+  border-radius: 0.5rem 0.5rem 0 0;
 }
-.work .content .project .weddings {
-  margin: 0 0 4px 0;
+.work .content .works-container .project .image .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1e1e1e7a;
+  opacity: 0;
+  transition: 0.2s;
 }
-.work .content .project .header {
+.work .content .works-container .project .image:hover .overlay {
+  opacity: 1;
+}
+.work .content .works-container .project .image .overlay a {
+  background-color: var(--white);
+  color: var(--accent-color);
+  padding: 0.5rem 0.8rem;
+  border: 1.5px solid var(--accent-color);
+  border-radius: 0.3rem;
+  transition: 0.2s;
+}
+.work .content .works-container .project .image .overlay a:hover {
+  background-color: var(--accent-color);
+  color: var(--white);
+}
+.work .content .works-container .project .desc {
+  padding: 0.5rem 0.75rem 0.7rem 0.75rem;
+}
+.work .content .works-container .project .desc .head {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.work .content .project .name {
-  display: inline-block;
-  font-size: 1.25rem;
-}
-.work .content .project p {
-  margin: 0.5rem 0 1rem 0;
-}
-.work .content .project .header .actions {
+.work .content .works-container .project .desc .head a {
   display: flex;
-  gap: 0.3rem;
+  color: var(--black);
+  transition: 0.2s;
 }
-.work .content .project .header .actions a {
-  background-color: #222;
+.work .content .works-container .project .desc .head a:hover {
+  transform: scale(1.25);
+}
+.work .content .works-container .project .desc .tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin: 0.5rem 0 0.75rem 0;
+}
+.work .content .works-container .project .desc .tags p {
+  background-color: var(--accent-color);
   color: var(--white);
-  font-size: 1.25rem;
+  font-family: var(--heading);
+  font-size: 0.75rem !important;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.2rem;
+}
+.alert-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  color: var(--white);
+  font-size: 2rem;
   text-align: center;
-  padding: 0.5rem 0.8rem;
-  border-radius: 0.5rem;
+  transform: translate(-50%, -50%);
 }
 
 /* SERVICE */
+.service .wrapper .content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem 1rem;
+}
+.offer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 /* CONTACT */
+.contact .wrapper .content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 2rem;
+}
+.contact .wrapper .content :is(aside, form, .input-box, .select-box) {
+  display: flex;
+  flex-direction: column;
+}
+.contact .wrapper .content aside {
+  gap: 1rem;
+}
+.contact .wrapper .content :is(.input-box, .select-box) {
+  gap: 0.5rem;
+}
+.info {
+  display: grid;
+  grid-template-areas:
+    "icon title"
+    "icon paragraph"
+    "icon link";
+}
+.info i {
+  grid-area: icon;
+  margin: 0 1rem 0 0;
+}
+.info span {
+  grid-area: title;
+}
+.info p {
+  grid-area: paragraph;
+}
+.info a {
+  grid-area: link;
+  margin: 1rem 0 0 0;
+}
+.contact .wrapper .content form {
+  background-color: var(--accent-color);
+  color: var(--white);
+  padding: 3rem;
+  border-radius: 1.5rem;
+}
+.contact .wrapper .content form .head p {
+  margin: 1rem 0 0 0;
+}
+.contact .wrapper .content .input-box {
+  margin: 2rem 0 1.5rem 0;
+}
+.contact .wrapper .content .input-box :is(input, textarea) {
+  background-color: transparent;
+  padding: 0.75rem 0;
+  border: none;
+  border-bottom: 1.5px solid var(--white);
+  outline: none;
+}
+.contact .wrapper .content .input-box :is(input, textarea),
+.contact .wrapper .content .input-box :is(input, textarea)::placeholder {
+  color: var(--white);
+  font-family: var(--paragraph), sans-serif;
+  font-size: 1rem;
+}
+.contact .wrapper .content .input-box textarea {
+  resize: vertical;
+}
+.contact .wrapper .content .select-box label {
+  position: relative;
+  padding: 0 0 0 2rem;
+}
+.contact .wrapper .content .select-box label input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 100%;
+  font-size: 1rem;
+  border: 1.5px solid var(--white);
+}
+.checkmark::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 22px;
+  background-color: transparent;
+  color: var(--white);
+  text-align: center;
+  transform: translateY(-50%);
+  opacity: 0;
+}
+.contact
+  .wrapper
+  .content
+  .select-box
+  label
+  input:checked
+  ~ .checkmark::before {
+  opacity: 1;
+}
+.contact .wrapper .content form button {
+  margin: 2rem 0 0 0;
+}
 
 /* FOOTER */
 footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--black);
   padding: 2rem 2.5rem;
 }
-footer span a {
+footer :is(span, a) {
   color: var(--white);
+  font-size: 1rem;
+}
+footer .social-links a:nth-child(even) {
+  margin: 0 0.5rem;
+}
+
+/* BREAKPOINTS */
+@media (max-width: 900px) {
+  nav {
+    padding: 1.5rem 2rem;
+  }
+}
+@media (max-width: 768px) {
+  nav {
+    padding: 1.25rem 1.75rem;
+  }
+  span {
+    font-size: 1.1rem;
+  }
+  .toggles a {
+    font-size: 0.9rem;
+  }
 }
