--- a/old/styles.css
+++ b/old/styles.css
@@ -40,7 +40,8 @@ section {
 article {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  gap: 3rem;
   width: 900px;
   max-width: 90%;
   min-height: 500px;
@@ -51,13 +52,18 @@ h2 {
   font-family: var(--heading);
 }
 h1 {
+  position: relative;
   color: var(--primary-color);
   font-size: 3rem;
-  text-align: center;
-  margin: 0 auto;
 }
-h2 {
-  font-size: 2rem;
+h1::before {
+  content: "";
+  position: absolute;
+  bottom: -0.5rem;
+  left: 0;
+  width: 110%;
+  height: 0.2rem;
+  background-color: var(--accent-color);
 }
 span,
 a,
@@ -71,7 +77,6 @@ span {
 p {
   font-family: var(--paragraph);
   font-size: 1rem;
-  text-align: justify;
   letter-spacing: 0.5px;
 }
 i {
@@ -92,16 +97,6 @@ button {
 }
 button:hover {
   border: 1.5px solid var(--white);
-}
-
-.content {
-  width: 100%;
-  margin: 2rem 0 0 0;
-}
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .hide {
@@ -134,9 +129,14 @@ nav :is(span, .toggles a) {
 nav.scroll :is(span, .toggles a) {
   color: var(--white);
 }
-nav img {
+nav > a {
   width: 200px;
   height: 50px;
+  display: flex;
+  align-items: center;
+}
+nav img {
+  width: 100%;
   object-fit: cover;
 }
 .toggles {
@@ -189,30 +189,30 @@ nav.scroll .toggles a::after {
 /* ABOUT */
 .about .content {
   display: grid;
-  grid-template-columns: 1.5fr 2fr;
+  grid-template-columns: 2fr 1.5fr;
   gap: 1rem;
 }
-.about .content .desc {
+.about .content aside {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #fff;
   transition: 0.5s;
 }
-.about .content .desc h2 {
+.about .content aside h2 {
   display: block;
   font-size: 2rem;
 }
-.about .content .desc p {
+.about .content aside p {
   margin: 0.5rem 0 1rem 0;
 }
-.about .content .desc .social-links {
+.about .content aside .social-links {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   height: 50px;
 }
-.about .content .desc .social-links a {
+.about .content aside .social-links a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -220,21 +220,21 @@ nav.scroll .toggles a::after {
   color: var(--white);
   font-size: 1.1rem;
 }
-.about .content .desc .social-links a:first-child {
+.about .content aside .social-links a:first-child {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
 }
-.about .content .desc .social-links a:first-child:hover {
+.about .content aside .social-links a:first-child:hover {
   border-left: 2px solid var(--secondary-color);
 }
-.about .content .desc .social-links a:last-child {
+.about .content aside .social-links a:last-child {
   border-top-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
-.about .content .desc .social-links a:last-child:hover {
+.about .content aside .social-links a:last-child:hover {
   border-right: 2px solid var(--secondary-color);
 }
-.about .content .desc .social-links a:hover {
+.about .content aside .social-links a:hover {
   background-color: var(--white);
   color: var(--secondary-color);
   border-top: 2px solid var(--secondary-color);
@@ -285,10 +285,10 @@ nav.scroll .toggles a::after {
   background-color: var(--secondary-color);
   color: var(--black);
 }
-.work .header h1 {
-  color: var(--white);
+.work .wrapper {
+  width: 1000px;
 }
-.work .header span {
+.work h1 {
   color: var(--white);
 }
 .work .content {
@@ -302,6 +302,9 @@ nav.scroll .toggles a::after {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.work .content aside form input {
+  width: 100%;
 }
 .work .content aside input {
   background-color: var(--white);
@@ -360,17 +363,6 @@ nav.scroll .toggles a::after {
 .work .content aside .filters .filter .options input {
   margin: 0 0.75rem 0 0;
   opacity: 0;
-}
-.work .content aside .filters .filter .options .checkmark {
-  position: absolute;
-  top: 50%;
-  left: 0.5rem;
-  width: 20px;
-  height: 20px;
-  border: 1.5px solid var(--accent-color);
-  transform: translateY(-50%);
-}
-.work .content aside .filters .filter .options input:checked ~ .checkmark {
 }
 .work .content .works-container {
   position: relative;
@@ -433,23 +425,13 @@ nav.scroll .toggles a::after {
 .work .content .works-container .project .desc {
   padding: 0.5rem 0.75rem 0.7rem 0.75rem;
 }
-.work .content .works-container .project .desc .head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.work .content .works-container .project .desc .head a {
-  display: flex;
-  color: var(--black);
-  transition: 0.2s;
-}
-.work .content .works-container .project .desc .head a:hover {
-  transform: scale(1.25);
+.work .content .works-container .project .desc span {
+  font-weight: bold;
 }
 .work .content .works-container .project .desc .tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: 0.3rem;
   margin: 0.5rem 0 0.75rem 0;
 }
 .work .content .works-container .project .desc .tags p {
@@ -459,6 +441,22 @@ nav.scroll .toggles a::after {
   font-size: 0.75rem !important;
   padding: 0.3rem 0.5rem;
   border-radius: 0.2rem;
+}
+.about .content aside .desc a,
+.work .content .works-container .project .desc a {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  background-color: var(--primary-color);
+  color: var(--white);
+  margin: 1.25rem 0 0 0;
+  padding: 0.5rem 0.8rem;
+  border-radius: 0.2rem;
+  transition: 0.2s;
+}
+.about .content aside .desc a i,
+.work .content .works-container .project .desc a i {
+  margin: 0 0 0 0.3rem;
 }
 .alert-text {
   position: absolute;
@@ -480,8 +478,21 @@ nav.scroll .toggles a::after {
 .offer {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 0.5rem;
+}
+.offer i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  border-radius: 0.2rem;
+  /* border-radius: 50%; */
+}
+.offer span {
+  color: var(--primary-color);
 }
 
 /* CONTACT */
@@ -506,19 +517,31 @@ nav.scroll .toggles a::after {
     "icon title"
     "icon paragraph"
     "icon link";
+  gap: 0 1rem;
 }
 .info i {
   grid-area: icon;
-  margin: 0 1rem 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--primary-color);
+  color: var(--white);
+  border-radius: 50%;
 }
 .info span {
   grid-area: title;
+  font-weight: bold;
 }
 .info p {
   grid-area: paragraph;
 }
 .info a {
   grid-area: link;
+  color: var(--black);
+  text-decoration: underline;
+  text-decoration-color: var(--accent-color);
   margin: 1rem 0 0 0;
 }
 .contact .wrapper .content form {
@@ -527,7 +550,12 @@ nav.scroll .toggles a::after {
   padding: 3rem;
   border-radius: 1.5rem;
 }
+.contact .wrapper .content form .head h2 {
+  font-size: 2rem;
+}
 .contact .wrapper .content form .head p {
+  font-family: var(--title), sans-serif;
+  font-size: 1.1rem;
   margin: 1rem 0 0 0;
 }
 .contact .wrapper .content .input-box {
@@ -566,20 +594,36 @@ nav.scroll .toggles a::after {
   width: 24px;
   height: 100%;
   font-size: 1rem;
-  border: 1.5px solid var(--white);
+  border: 2px solid var(--white);
+  margin: 0;
+  padding: 0;
 }
 .checkmark::before {
   content: "";
   position: absolute;
   top: 50%;
-  left: 0;
-  width: 22px;
-  background-color: transparent;
+  left: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: calc(100% + 4px);
+  background-color: var(--primary-color);
   color: var(--white);
   text-align: center;
-  transform: translateY(-50%);
+  margin: 0;
+  padding: 0;
+  transform: translate(-50%, -50%);
   opacity: 0;
 }
+.work
+  .content
+  aside
+  .filters
+  .filter
+  .options
+  input:checked
+  ~ .checkmark::before,
 .contact
   .wrapper
   .content
@@ -588,6 +632,17 @@ nav.scroll .toggles a::after {
   input:checked
   ~ .checkmark::before {
   opacity: 1;
+}
+.work .content aside .filters .filter .options .checkmark {
+  top: 50%;
+  left: 0.5rem;
+  width: 20px;
+  height: 20px;
+  border: 1.5px solid var(--primary-color);
+  transform: translateY(-50%);
+}
+.work .content aside .filters .filter .options .checkmark::before {
+  height: calc(100% + 4px);
 }
 .contact .wrapper .content form button {
   margin: 2rem 0 0 0;
@@ -598,7 +653,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--black);
+  background-color: var(--secondary-color);
   padding: 2rem 2.5rem;
 }
 footer :is(span, a) {
@@ -610,19 +665,83 @@ footer .social-links a:nth-child(even) {
 }
 
 /* BREAKPOINTS */
-@media (max-width: 900px) {
-  nav {
-    padding: 1.5rem 2rem;
-  }
-}
-@media (max-width: 768px) {
-  nav {
-    padding: 1.25rem 1.75rem;
-  }
+@media (max-width: 992px) {
   span {
     font-size: 1.1rem;
   }
+  nav {
+    padding: 1.5rem 2rem;
+  }
+  nav > a {
+    width: 100px;
+  }
   .toggles a {
     font-size: 0.9rem;
+  }
+  .jumbotron img {
+    width: 250px;
+  }
+}
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  span {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 0.9rem;
+  }
+  nav {
+    padding: 1.25rem 1.75rem;
+  }
+  nav > a {
+    width: 75px;
+  }
+  .jumbotron .text span {
+    font-size: 1.25rem;
+  }
+  .jumbotron img {
+    width: 200px;
+  }
+  .jumbotron .text p {
+    margin: 0.3rem 0 1rem 0;
+  }
+  .about .content {
+    grid-template-columns: 1fr 1fr;
+  }
+  .about .content aside h2 {
+    font-size: 1.5rem;
+  }
+  .ourJourney .swiper-wrapper .swiper-slide .overlay {
+    padding: 0 0.5rem 1rem 0.5rem;
+  }
+  .ourJourney .swiper-wrapper .swiper-slide .overlay span {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 576px) {
+  span {
+    font-size: 0.9rem;
+  }
+  nav {
+    padding: 1rem 1.5rem;
+  }
+  .jumbotron {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+  .jumbotron .text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .jumbotron .text span {
+    font-size: 1.1rem;
+  }
+  .jumbotron img {
+    width: 300px;
   }
 }
